[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "just a sandbox"
authors = ["Bruno Fontana <fontanads@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
pandas = "^1.5.2"
altair = "^4.2.0"
jupyterlab = "^3.5.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
tox = "^4.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
